ensure line separator is aligned with text above on longform

--- a/express/code/blocks/faqv2/faqv2.css
+++ b/express/code/blocks/faqv2/faqv2.css
@@ -184,7 +184,7 @@
   content: '';
   position: absolute;
   bottom: 0;
-  left: 5%;
+  left: 3%;
   right: 5%;
   width: 90%;
   border-bottom: 1px solid #8F8F8F;
